@@ -1,8 +1,12 @@
 <div class="pagination">
     <div class="pagination__padding"></div>
-    <div class="pagination__chevron-container" [class.pagination__chevron-container__nav-open]="expanded">
+    <div class="pagination__chevron-container row no-gutters" [class.pagination__chevron-container__nav-open]="expanded">
       <span class="pagination__showing-info pl-3">Showing {{ ((currentPage-1) * pageSize) + 1}} to {{ currentDisplayTotal }} of  {{total}} entries</span>
-      <span (click)="setPage(+currentPage + 1)" class="pagination__chevron-left fas fa-chevron-right"></span>
-      <span (click)="setPage(+currentPage - 1)" class="pagination__chevron-right fas fa-chevron-left"></span>
+      <span *ngIf="numberOfSelectedItems == 0" class="col"></span>
+      <span *ngIf="numberOfSelectedItems > 0 && numberOfSelectedItems != total" class="pagination__selected-item-info col">{{ numberOfSelectedItems }} item<span *ngIf="numberOfSelectedItems > 1">s</span> selected</span>
+      <span *ngIf="numberOfSelectedItems == total" class="pagination__selected-item-info col">All items are selected</span>
+      <span *ngIf="currentPage != 1" (click)="setPage(+currentPage - 1)" class="pagination__chevron-right fas fa-chevron-left"></span>
+      <span *ngIf="currentPage != pager.totalPages" (click)="setPage(+currentPage + 1)" class="pagination__chevron-left fas fa-chevron-right"></span>
+      <span *ngIf="currentPage == pager.totalPages && pager.totalPages > 0" class="pagination__chevron-left" style="pointer-events: none;"></span>
     </div>
   </div>
