@@ -4,6 +4,11 @@
 
 - v1.0.1011                                 -
 ---------------------------------------------
+- 2020-06-12                                -
+---------------------------------------------
+.: WSM: Task: Add a number of selections in item controller (WSM-110)
+
+---------------------------------------------
 - 2020-06-11                                -
 ---------------------------------------------
 .: WSM: Task: Loading top bar (WSM-116)
